# agentic-kg-explorer

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  FEEDBACK.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: cypher_templates.yaml  evaluation_criteria.yaml  intents.yaml  providers.yaml  settings.py  test_queries.yaml
data/: embedding_hashes.json  entity_catalog.json  sample_data.py
data/papers/: langgraph_docs_graphapi.md  manifest.yaml
db_setup_example/: __init__.py  db_setup.py  models.py
docs/: comments.md  db_experiment_plan.md  phase3-web-search-vector-design.md  phase4-critic-agent-design.md  phase5-prompt-optimizer-design.md  planner_feedback.md.txt  schema.md  sync_input_problem.md  verify_queries.md
neo4j/: schema.cypher  seed_data.cypher  seed_evaluation.cypher  validation_queries.cypher
neo4j/migrations/: 001_add_impl_descriptions.cypher
scripts/: analyze_failures.py  generate_embeddings.py  generate_entity_catalog.py  ingest_document.py  ingest_papers.py  load_sample_data.py  run_migration.py  run_optimization.py  seed_evaluation_criteria.py  sync_kg_to_vdb.py  test_agent.py  test_queries.py
src/agents/: README.md  __init__.py  graph.py  state.py
src/api/: __init__.py  app.py  kg_writer.py  routes.py  schemas.py
src/critic/: __init__.py  criteria.py  evaluator.py  scorer.py
src/graph/: __init__.py  client.py  schema.py
src/ingestion/: __init__.py  chunker.py  crawler.py  linker.py
src/optimizer/: __init__.py  analyzer.py  generator.py  models.py  registry.py  runner.py
tests/: test.ipynb  test_kg.ipynb
(+20 files in other folders)
